# FastAI_course

./: 180_autoencoder.ipynb  accel_sgd.html  activations.html  attention.html  augment.html  backpropagation.html  cifar10_and_wandb.html  collaborative-filtering-deep-dive.html  convolutions.html  cosine.html  datasets.html  ddim.html  ddpm.html  ddpm_v2.html  ddpm_v3.html  deployment.html  diffusion-attn-cond.html  diffusion_unet.html  fid.html  foundations.html  how-does-a-neural-net-really-work.html  how-random-forests-really-work.html  imgnet_tiny-200.html  imgnet_tiny-wide.html  imgnet_tiny-widish.html  imgnet_tiny.html  index.html  initializing.html  intro.html  kaggle_tut.html  karras.html  learner.html  linear-model-and-neural-net-from-scratch.html  lm-hackers.html  matrix.html  minibatch_training.html  multi-target.html  naturallanguage.html  nca.html  neuralnet.html  (+13 more)
_proc/: 000_Intro.ipynb  010_Deployment.ipynb  020_NeuralNet.ipynb  021_how-does-a-neural-net-really-work.ipynb  030_NaturalLanguage.ipynb  041_linear-model-and-neural-net-from-scratch.ipynb  042_why-you-should-use-a-framework.ipynb  050_how-random-forests-really-work.ipynb  060_Kaggle_tut.ipynb  061_multi-target.ipynb  070_collaborative-filtering-deep-dive.ipynb  080_tabular.ipynb  100_lm-hackers.ipynb  110_Stable_Diffusion_overview.ipynb  120_Matrix.ipynb  130_Backpropagation.ipynb  140_minibatch_training.ipynb  150_datasets.ipynb  160_foundations.ipynb  170_convolutions.ipynb  190_learner.ipynb  200_activations.ipynb  210_initializing.ipynb  220_accel_sgd.ipynb  230_resnet.ipynb  240_augment.ipynb  250_DDPM.ipynb  261_NCA.ipynb  270_DDPM_v2.ipynb  280_fid.ipynb  290_DDPM_v3.ipynb  300_DDIM.ipynb  310_cifar10_and_wandb.ipynb  (+12 more)
(+103 files in other folders)
