[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "fastAIcourse"
dynamic = ["version"]
description = "fastAIcourse"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
authors = [{name = "Benedict Thekkel", email = "bthekkel1@gmail.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['fastdownload', 'fastcore', 'torchvision', 'matplotlib', 'pandas', 'requests', 'pyyaml', 'fastprogress>=0.2.4', 'pillow>6.0.0', 'scikit-learn', 'scipy', 'spacy<4', 'packaging', 'fastbook', 'numba', 'kaggle', 'seaborn', 'dtreeviz', 'diffusers', 'torcheval', 'accelerate']

[project.urls]
Repository = "https://github.com/bthek1/fastAIcourse"
Documentation = "https://bthek1.github.io/fastAIcourse"

[project.entry-points.nbdev]
fastAIcourse = "fastAIcourse._modidx:d"

[project.optional-dependencies]
dev = ['ipywidgets', 'pytorch-lightning', 'pytorch-ignite', 'transformers', 'sentencepiece', 'tensorboard', 'pydicom', 'catalyst', 'flask_compress', 'captum>=0.3', 'flask', 'wandb', 'kornia', 'scikit-image', 'neptune-client', 'comet_ml', 'albumentations', 'opencv-python', 'pyarrow', 'catalyst', 'ninja', 'timm>=0.6.2.dev', 'accelerate>=0.10.0']

[tool.setuptools.dynamic]
version = {attr = "fastAIcourse.__version__"}

[tool.setuptools.packages.find]
include = ["fastAIcourse"]

[tool.nbdev]
jupyter_hooks = true
